# euro-office-core

./: .gitattributes  .gitignore  3DPARTY.md  CMakeLists.txt  Readme.md  TESTING.md  build_dependencies.sh  common.cmake  conanfile.txt  conanws.yml  msvc_fix.h  vcpkg-configuration.json  vcpkg.json
.docker/: core-wasm.bake.Dockerfile  core.bake.Dockerfile  third-party.bake.Dockerfile
.github/: CODEOWNERS
.github/workflows/: build-wasm.yml  build-windows.yml  build.yml
Apple/: CMakeLists.txt  IWork.cpp
Apple/test/: main.cpp
Common/: ASCATLError.h  ASCUtils.h  ASCUtilsDefines.h  ATLDefine.h  Base64.h  CMakeLists.txt  FileWriter.h  MS-LCID.h  MediaFormatDefine.h  OfficeDefines.h  OfficeFileErrorDescription.h  OfficeFileFormatChecker.h  OfficeFileFormatChecker2.cpp  OfficeFileFormatDefines.h  OfficeFileFormats.h  OfficeFileTemplate.h  VideoFileErrorDescription.h  kernel_config.h  posix_compat.h
Common/3dParty/: build_3rdparty.py  build_3rdparty_common.py  build_dependencies.sh
Common/3dParty/boost/: CMakeLists.txt  conanfile.py  hashes.txt  nc-build.py  portfile.cmake  vcpkg.json
Common/3dParty/boost/tools/1.72/: arm64-linux-dynamic
Common/3dParty/boost/tools/1.72/x64-linux-dynamic/: Dockerfile
Common/3dParty/hunspell/: CMakeLists.txt  nc-build.py  nc-build.sh
Common/3dParty/hunspell/patch/: hunspell1.patch  hunspell2.patch  hunspell3.patch  hunspell4.patch
Common/3dParty/hunspell/patches/: fix-wasm-hunspell.patch
Common/3dParty/hunspell/qt/: CMakeLists.txt
Common/3dParty/hunspell/test/: main.cpp
Common/3dParty/hunspell/wasm/js/: code.js  spell.js  spell_post.js
Common/3dParty/hunspell/wasm/src/: engine.h
Common/Network/: CMakeLists.txt
Common/cfcpp/: CMakeLists.txt  cfexception.h  cfitem.cpp  cfitem.h  cfstorage.cpp  cfstorage.h  cfstream.cpp  cfstream.h  compoundfile.cpp  compoundfile.h  compoundfile_impl.h  directoryentry.cpp  directoryentry.h  event.h  guid.h  header.cpp  header.h  idirectoryentry.h  sector.cpp  sector.h  sectorcollection.cpp  sectorcollection.h  slist.h  streamrw.cpp  streamrw.h  streamview.cpp  streamview.h  svector.h
Common/cfcpp/test/: CMakeLists.txt  tst_compondfile.h
Common/js/: desktop_fetch_new.js  string_utf8.js
Common/license/: header.license
Common/msvc/: converter.manifest
DesktopEditor/AllFontsGen/: CMakeLists.txt  main.cpp
DesktopEditor/allthemesgen/: CMakeLists.txt  main.cpp
DesktopEditor/common/: ASCVariant.h  Array.h  Base64.cpp  Base64.h  BigInteger.h  ByteBuilder.cpp  ByteBuilder.h  CalculatorCRC32.h  Directory.cpp  Directory.h  File.cpp  File.h  File_ios.mm  IGrObject.h  MathUtils.h  Path.cpp  Path.h  ProcessEnv.cpp  ProcessEnv.h  ShapeAspects.h  StreamWriter.cpp  StreamWriter.h  StringBuilder.cpp  StringBuilder.h  StringExt.cpp  StringExt.h  StringUTF32.cpp  StringUTF32.h  SystemUtils.cpp  SystemUtils.h  Types.h  base_export.h
DesktopEditor/doctrenderer/app_builder/: CMakeLists.txt  main.cpp
DesktopEditor/fontengine/js/: CMakeLists.txt  module.js
DesktopEditor/fontengine/js/allfonts/: module.js
DesktopEditor/fontengine/js/cpp/: text.cpp
DesktopEditor/fontengine/js/engine/: module_js.js  module_post.js  module_pre.js
DesktopEditor/graphics/tests/BooleanOperations_Unit-tests/: CMakeLists.txt
DesktopEditor/pluginsmanager/: CMakeLists.txt  help.h  main.cpp
DesktopEditor/xmlsec/src/: CMakeLists.txt
DesktopEditor/xmlsec/src/osign/lib/src/: buffer.cpp
DesktopEditor/xmlsec/src/osign/test/: main.cpp
DesktopEditor/xmlsec/src/src/: Certificate_openssl.h  OOXMLSigner.cpp  OOXMLVerifier.cpp
DesktopEditor/xmlsec/src/wasm/all/: engine.js
DesktopEditor/xmlsec/src/wasm/hash/: CMakeLists.txt  hash_base.js  hash_base_post.js  hash_base_pre.js
DesktopEditor/xmlsec/src/wasm/oform_plugin/module/: CMakeLists.txt  engine_base.js  engine_base_post.js  engine_base_pre-1.js  engine_base_pre-2.js  main.cpp  nc-build.sh
DesktopEditor/xmlsec/src/wasm/oform_plugin/module/deploy/: engine_ie.js
DjVuFile/: CMakeLists.txt  DjVu.cpp  DjVu.h  DjVuFileImplementation.cpp  DjVuFileImplementation.h
DocxRenderer/: CMakeLists.txt  DocxRenderer.cpp  DocxRenderer.h  convert_params.h
EpubFile/: CMakeLists.txt
Fb2File/: CMakeLists.txt  Fb2File.cpp
Fb2File/test/: main.cpp
Fb2File/xml/tmp/: main.cpp
HtmlFile/: HtmlFile.cpp  HtmlFile.h
HtmlFile2/: CMakeLists.txt  HTMLParameters.h  HTMLReader.cpp  HTMLReader.h  MarkdownParameters.h  Table.cpp  Table.h  htmlfile2.cpp
HtmlFile2/Tags/: MDTags.cpp  OOXMLTags.cpp
HtmlFile2/Writers/: IWriter.h  MDWriter.cpp  OOXMLWriter.cpp  OOXMLWriter.h
HtmlFile2/src/: Languages.h
HtmlFile2/test/: main.cpp
HwpFile/: CMakeLists.txt
MsBinaryFile/: CMakeLists.txt
MsBinaryFile/Projects/VbaFormatLib/Linux/cmake/: CMakeLists.txt
OFDFile/: CMakeLists.txt
OOXML/test/: CMakeLists.txt  common.cpp  common.h
OOXML/test/xlsb2xlsx/: conversion.cpp
OOXML/test/xlsx2xlsb/: conversion.cpp
OdfFile/Reader/Converter/StarMath2OOXML/: CMakeLists.txt  TFormulaSize.h  TextDirection.h  cconversionsmtoooxml.cpp  cconversionsmtoooxml.h  conversionmathformula.cpp  conversionmathformula.h  cooxml2odf.h  cstarmathpars.cpp  cstarmathpars.h  fontType.h  typeConversion.h  typeselements.h
OdfFile/Reader/Converter/StarMath2OOXML/TestEQNtoOOXML/: CMakeLists.txt
OdfFile/Reader/Converter/StarMath2OOXML/TestSMConverter/: CMakeLists.txt
OfficeUtils/: CMakeLists.txt
OfficeUtils/js/: CMakeLists.txt
OfficeUtils/js/wasm/js/: zlib.js  zlib_post.js  zlib_pre.js
OfficeUtils/tests/: CMakeLists.txt
PdfFile/: CMakeLists.txt  OnlineOfficeBinToPdf.cpp  OnlineOfficeBinToPdf.h  PdfEditor.cpp  PdfEditor.h  PdfFile.cpp  PdfFile.h  PdfReader.cpp  PdfReader.h  PdfWriter.cpp  PdfWriter.h
PdfFile/Resources/CMapMemory/: CMakeLists.txt  CMapSerialize.cpp  cmap_memory.cpp  cmap_memory.h
UnicodeConverter/: CMakeLists.txt  UnicodeConverter.cpp  UnicodeConverter.h  UnicodeConverter_Encodings.h  UnicodeConverter_internal_empty.cpp
UnicodeConverter/UnicodeConverterTest/UnicodeConverterTest/: main.mm
UnicodeConverter/test/: main.cpp
XpsFile/: CMakeLists.txt  XpsFile.cpp  XpsFile.h
(+8051 files in other folders)
